# 24-vision-yhl

./: .gitignore  CHANGEKOG.md  CHANGELOG.md  CMakeLists.txt  README.md  SSH操作总结.md  learning.md  main.cpp
Armored_Plate/: CMakeLists.txt  README.md  main.cpp
CMake_I/: CMakeLists.txt
CMake_I-master/common/math/: CMakeLists.txt
CMake_I-master/modules/: CMakeLists.txt
CMake_I/common/: CMakeLists.txt
CMake_I/common/kalman/: CMakeLists.txt
Point_Cloud/: CMakeLists.txt  main.cpp  readme.md
Pytorch-Classification/: predict.py  test.py  torchutils.py  train.md  train.py
Pytorch-Classification/cpp-onnxruntime-resnet50/: CMakeLists.txt  OnnxRuntimeResNet.cpp  onnx.md
ROS_camera_driver/: camera.md
ROS_camera_driver/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
ROS_camera_driver/src/camera_driver/: CMakeLists.txt  package.xml
ROS_topic/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
YOLOX-Detection/YOLOX-main/: README.md
YOLOX-Detection/YOLOX-main/LabelmeData/: aircraft_1005.json  aircraft_1006.json  aircraft_1011.json  aircraft_1017.json  aircraft_102.json  aircraft_1028.json  aircraft_1032.json  aircraft_1034.json  aircraft_1041.json  aircraft_1045.json  aircraft_105.json  aircraft_1052.json  aircraft_1056.json  aircraft_1058.json  aircraft_1060.json  aircraft_1063.json  aircraft_1066.json  aircraft_1067.json  aircraft_1068.json  aircraft_1076.json  aircraft_1081.json  aircraft_1087.json  aircraft_1095.json  aircraft_1098.json  aircraft_1105.json  aircraft_1111.json  aircraft_1114.json  aircraft_1115.json  aircraft_1121.json  aircraft_1124.json  aircraft_1134.json  aircraft_114.json  aircraft_116.json  aircraft_119.json  aircraft_123.json  aircraft_14.json  aircraft_142.json  aircraft_148.json  aircraft_149.json  aircraft_152.json  (+263 more)
YOLOX-Detection/YOLOX-main/scripts-used(part)/: demo.py  labelme2voc.py  voc.py  voc_classes.py
catkin_ws/src/topic_pkg/: CMakeLists.txt  package.xml
classification-finished/: export_onnx.py  predict.py  train.py
csv/: CMakeLists.txt  main.cpp
detection/: CMakeLists.txt  READ.md  main.cpp
detection/YOLOX-main/: README.md
detection/YOLOX-main/LabelmeData/: aircraft_100.json  aircraft_1001.json  aircraft_1008.json  aircraft_1009.json  aircraft_101.json  aircraft_1010.json  aircraft_1012.json  aircraft_1016.json  aircraft_1018.json  aircraft_1021.json  aircraft_1023.json  aircraft_1026.json  aircraft_1031.json  aircraft_1033.json  aircraft_1035.json  aircraft_1039.json  aircraft_104.json  aircraft_1061.json  aircraft_1064.json  aircraft_1069.json  aircraft_107.json  aircraft_1071.json  aircraft_1072.json  aircraft_1077.json  aircraft_1078.json  aircraft_1085.json  aircraft_1091.json  aircraft_1097.json  aircraft_1099.json  aircraft_110.json  aircraft_1102.json  aircraft_1104.json  aircraft_1108.json  aircraft_1113.json  aircraft_1118.json  aircraft_1130.json  aircraft_1132.json  aircraft_1136.json  aircraft_1137.json  aircraft_120.json  (+268 more)
rectangle/: CMakeLists.txt  main.cpp
华南虎视觉组实习生任务报告书/: 华南虎视觉组实习生任务.md
(+20 files in other folders)
